# wust-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package-lock.json  pkg_index_js.index.js
src/: application.rs  lib.rs  mouse.rs  object.rs  object_type.rs  objects.json  objects2.json  objs.rs  shader.frag  shader.vert  state.json  state.rs  transformations.rs  utils.rs  vec3.rs
