[package]
name = "wust-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
obj-rs = "0.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'MouseEvent',
  'WebGlTexture',
  'WheelEvent',
  'KeyboardEvent',
]
